# function_first_composition_example_rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  server.rs
src/restaurant_ratings/: mod.rs
tests/: integration_test.rs  testutils.rs
