[package]
name = "function_first_composition_example_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.5"
reqwest = { version="0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.100"
testcontainers = "0.14.0"

[lib]
name="functionfirst"
path="src/lib.rs"

[[bin]]
name="server"
path="src/main.rs"
