[package]
name = "function_first_composition_example_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axium = "0.0.0"
axum = { version = "0.6.18", features = ["http2"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.167"
serde_json = "1.0.100"
testcontainers = "0.14.0"
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }

[lib]
name = "functionfirst"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
